# node-virtual-enviroment-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  cog.toml  install.sh  lcov.info
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  generate-changelog.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: lib_test.rs  main_test.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  error.rs  lib.rs
crates/core/src/domain/: mod.rs  release.rs  version.rs
crates/core/src/ports/: archive.rs  fs.rs  http.rs  mod.rs  platform.rs
crates/core/src/services/: installer.rs  mod.rs  resolver.rs
crates/core/src/state/: layout.rs
crates/core/tests/: domain_version_test.rs  error_test.rs  fs_std_test.rs  installer_service_test.rs  layout_test.rs  resolver_test.rs
crates/infra/: Cargo.toml
crates/infra/src/: fs_std.rs  http_client.rs  lib.rs
crates/infra/src/archive/: mod.rs  tar_xz.rs  zip.rs
crates/infra/src/platform/: mod.rs  unix.rs  windows.rs
crates/infra/tests/: archive_tar_xz_test.rs  archive_zip_test.rs  fs_std_test.rs  http_client_test.rs  platform_unix_test.rs
githooks/: pre-push
scripts/: check-coverage.sh  setup-git-hooks.sh
