[workspace]
members = [
  "crates/core",
  "crates/infra",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Javier Gala <jgalaberdev@gmail.com>"]
description = "Node Version Environment - A Node.js version manager without privilege escalation"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
async-trait = "0.1"

[workspace.dev-dependencies]
assert_cmd = "2"
predicates = "3"
nve-infra = { path = "../infra" }
tempfile = "3"
pretty_assertions = "1"
cargo-llvm-cov = { version = "0.6", default-features = false }
