[package]
name = "nve-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nve-core = { path = "../core" }
nve-infra = { path = "../infra" }
anyhow.workspace = true
tokio.workspace = true
semver.workspace = true
dirs = "6.0.0"
clap = { version = "4.5.46", features = ["derive"] }
