[package]
name = "nve-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nve-core = { path = "../core" }
nve-infra = { path = "../infra" }
anyhow.workspace = true
tokio.workspace = true
semver.workspace = true
async-trait.workspace = true
dirs = "6.0.0"
clap = { version = "4.5.46", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
serde_json = "1"
assert_cmd = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
predicates = { version = "3", features = ["diff"] }

[target.'cfg(windows)'.dependencies]
windows = "0.54"