[package]
name = "nve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
