[package]
name = "nve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1"
tempfile = "3"
nve-infra = { path = "../infra" }

