[package]
name = "nve-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[target.'cfg(windows)'.dependencies]
junction = "1" 

[dependencies]
nve-core = { path = "../core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tar = "0.4.44"
xz2 = "0.1.7"
walkdir = "2.5.0"
tempfile = "3.21.0"
zip = { version = "4.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = { version = "4.6", default-features = false, features = ["deflate"] }
pretty_assertions = "1"
assert_fs = "1"
predicates = "3"
httpmock = "0.7"
tar = "0.4"
xz2 = "0.1"
